# games

Snake/: CMakeLists.txt
Snake/cmake/: FindSFML.cmake
Snake/config/: big_food.ini  field.ini  food.ini  pause_menu.ini  score_bar.ini  snake.ini  status_bar.ini  window.ini
Snake/files/: leaderboard.ngsnk
Snake/include/Clock/: Clock.hpp
Snake/include/Entities/: Food.hpp  Snake.hpp
Snake/include/GUI/: Button.hpp  Field.hpp  GUI.hpp  PauseMenu.hpp  ScoreBar.hpp  StatusBar.hpp  TextBox.hpp
Snake/include/Random/: Random.hpp
Snake/include/SFML/Graphics/: Rect.hpp
Snake/include/SFML/Network/: Packet.hpp  SocketSelector.hpp
Snake/include/States/: Core.hpp  GameState.hpp  MainMenuState.hpp  State.hpp
Snake/include/Structs/: StateData.hpp
Snake/src/: main.cpp
Snake/src/Clock/: Clock.cpp
Snake/src/Entities/: Food.cpp  Snake.cpp
Snake/src/GUI/: Button.cpp  Field.cpp  GUI.cpp  PauseMenu.cpp  ScoreBar.cpp  StatusBar.cpp  TextBox.cpp
Snake/src/Random/: Random.cpp
Snake/src/States/: Core.cpp  GameState.cpp  MainMenuState.cpp
Snake/src/Structs/: StateData.cpp
